2005-06-04  Will Duquette  <will@wjduquette.com>

	* snit.tcl: Checked a number of small optimizations Jeff Hobbs
	sent me. Bumped the version number to 0.98.
	* pkgIndex.tcl: Bumped the version number to 0.98.
	* dictionary.txt: Bumped the version number to 0.98.
	* snit.man: Bumped the version number to 0.98.
	* snitfaq.man: Bumped the version number to 0.98.

2005-04-11  Marty Backe <marty@lucidway.org>

        * snit.man: Fixed typo in the -configuremethod example.

2005-02-14  Andreas Kupries <andreask@activestate.com>

	* snitfaq.man: Fixed a number of typos reported by Bob Techentin,
	  see [SF Tcllib Bug 1050674].

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-09-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* snit.test: Fixed the tests which were dependent on the exact
	  order of results returned by [array names]. Which failed for Tcl
	  8.5. Added lsort and updated expected results, for canonical
	  comparison.

2004-09-18  Will Duquette  <will@wjduquette.com>

	* snit.man: 	Documented hierarchical methods and typemethods.

	* Everything:   Updated version to 0.97.

2004-09-16  Will Duquette  <will@wjduquette.com>

	* snit.tcl	In "component foo -public name", the "-public
        		name" part is now implemented as "delegate method
			{name *} to foo".
	* snit.test     Added tests for "$type info typemethods", "$self
			info typemethods" and "$self info methods" for the
			case of hierarchical methods/typemethods, and
			fixed related bugs in snit.tcl.

2004-09-14  Will Duquette  <will@wjduquette.com>

	* snit.tcl	Modified the implementation of hierarchical methods;
	* snit.test	this involved extending the syntax of method
			"using" patterns to better support the 
			hiearchical case.

	* snit.tcl      Extended the "delegate method *" and
	* snit.test     "delegate typemethod *" syntax to work better with